# allegro_xarm_demo

./: .gitmodules  detect_cam.py
src/allegro_hand/launch/: allegro_hand.launch
src/allegro_hand_controllers/: CMakeLists.txt  package.xml
src/allegro_hand_controllers/launch/: allegro_hand.launch
src/allegro_hand_controllers/src/: allegro_node.h  allegro_node_grasp.cpp  allegro_node_grasp.h  allegro_node_pd.cpp  allegro_node_pd.h
src/allegro_hand_controllers/srv/: SetParams.srv
src/allegro_hand_parameters/: gains_pd.yaml
src/apriltag_detector/: CMakeLists.txt  package.xml
src/apriltag_detector/launch/: atag.launch
src/apriltag_detector/msg/: Event.msg
src/apriltag_detector/src/: main.py
src/apriltag_detector/srv/: GetPresence.srv
src/arm_controller/: CMakeLists.txt  package.xml  poses.yaml
src/arm_controller/launch/: arm_bringup.launch
src/arm_controller/msg/: ArmStatus.msg  HandStatus.msg  JointPos.msg
src/arm_controller/scripts/: teleop.py
src/arm_controller/src/: hand.py  hand_pd.py  xarm.py
src/arm_controller/srv/: GetArmStatus.srv  GetBool.srv  MoveArm.srv  MoveArmJoints.srv  SetBool.srv
src/average-finger-pos/: CMakeLists.txt  package.xml
src/average-finger-pos/src/: main.py
src/hand_teleop/: CMakeLists.txt  package.xml
src/hand_teleop/src/: main.py
src/hand_yank_detector/: CMakeLists.txt  config.yaml  package.xml
src/hand_yank_detector/src/: main.py
src/handover_demo/: CMakeLists.txt  config.yaml  package.xml
src/handover_demo/launch/: controls.launch  demo.launch  detector_merge_test.launch  teleop.launch
src/handover_demo/msg/: MergedEvent.msg
src/handover_demo/scripts/: controls.py
src/handover_demo/src/: actuator.py  auto.py  detector_merge.py  main.py  teleop.py
src/joint_pos_repub/: CMakeLists.txt  package.xml
src/joint_pos_repub/src/: main.py
src/joint_state_repub/: CMakeLists.txt  package.xml
src/joint_state_repub/src/: main.py
src/yolo_detector/: CMakeLists.txt  package.xml
src/yolo_detector/launch/: download_model.launch  yolo.launch
src/yolo_detector/msg/: Event.msg
src/yolo_detector/scripts/: download_model.py
src/yolo_detector/src/: main.py
